# d2query-cli

./: README.md  pyproject.toml
data/: abilities.json
src/d2query_cli/: __init__.py  cli.py  dataset.py  html_report.py  search.py
