[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "d2query-cli"
version = "0.1.0"
description = "destiny-ish codex search CLI (offline sample dataset)"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [{name = "bella"}]
keywords = ["destiny", "cli", "search", "codex"]

[project.scripts]
d2q = "d2query_cli.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
